[package]
name = "bevy-pn-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.10", features = ["serialize"] }
derive_builder = "0.12"
snafu = "0.7"
test-case = "3.1"
serde_json = "1.0"

# TODO: wait for pubnub sdk release
pubnub = { git = "https://github.com/pubnub/rust.git", branch = "phoenix" }

[[example]]
name = "simple"
required-features = []
